@@ -1,6 +1,6 @@
 package SVK;
 
-our $VERSION = '1.00_02';
+our $VERSION = '1.00_03';
 
 =head1 NAME
 
